tests/snapshots/examples_fixtures/aether__bench_reuse.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aether/bench_reuse.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
