tests/snapshots/examples_fixtures/aether__bench_reuse_enabled.snap
---
source: tests/examples_fixtures_snapshots.rs
assertion_line: 27
---
Fixture: examples/aether/bench_reuse_enabled.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
