tests/snapshots/examples_fixtures/aether__fbip_failure_cases.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aether/fbip_failure_cases.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
